# legent-ai

./: .gitignore  VNC_INTEGRATION.md  docker-compose.yml  fix_vnc_connection.sh  test_chat_display.py  test_vnc_integration.py
backend/: .env  .env.example  Dockerfile  alembic.ini  dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt  test.db  test_vnc.py
backend/alembic/: env.py
backend/app/api/: messages.py  schemas.py  sessions.py
backend/app/core/: config.py
backend/app/db/: crud.py  database.py  models.py
backend/app/routes/: vnc.py
backend/app/schemas/: session.py
backend/app/service/: agent_service.py  stream_manager.py
backend/app/service/computer_use/: loop.py
backend/computer-use-demo/computer_use_demo/: streamlit.py
backend/computer-use-demo/computer_use_demo/tools/: edit.py
backend/migrations/: add_screenshot_column.sql
backend/scripts/: mutter_startup.sh  novnc_startup.sh  start_all.sh  tint2_startup.sh  tint2rc  x11vnc_startup.sh  xvfb_startup.sh
backend/tests/: conftest.py  requirements.txt  test_agent_service.py  test_api_endpoints.py  test_api_key_simulation.py  test_simple_integration.py  test_stream_manager.py
computer-use-demo/: .gitignore
computer-use-demo/computer_use_demo/tools/: groups.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  global.css
frontend/src/assets/: base.css
frontend/src/components/: AppHeader.vue  ChatPanel.vue  ChatPanelPolling.vue  SessionManager.vue  SessionsSidebar.vue  StatusBadge.vue  VNCViewer.vue  (+1 more)
(+15 files in other folders)
