[project]
name = "backend"
version = "0.1.0"
description = "Legent AI Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "aiosqlite>=0.21.0",
    "anthropic>=0.71.0",
    "jsonschema>=4.25.1",
    "httpx>=0.28.1",
]
